検索フォームコメント変更

--- a/templates/app_folder/university_list.html
+++ b/templates/app_folder/university_list.html
@@ -27,7 +27,7 @@
 
         {# 検索フォーム #}
         <div class="max-w-2xl mx-auto mb-16">
-            <p class="text-center text-gray-500 mb-6">大学名やキャンパス名の一部を入力して検索できます。</p>
+            <p class="text-center text-gray-500 mb-6">大学名やキャンパス名の一部を入力して検索！</p>
             <form id="search-form" action="{% url 'campus_guide:search' %}" method="get">
                 <div class="relative">
                     <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
