--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 <nav>
                     {# ↓↓↓ ここを修正しました ↓↓↓ #}
                     <a href="{% url 'campus_guide:university_list' %}" class="px-4 py-2 rounded-md text-sm font-medium hover:bg-gray-100 transition-colors duration-200">
-                        大学一覧
+                        トップへ
                     </a>
                 </nav>
             </div>
