--- a/templates/app_folder/university_detail.html
+++ b/templates/app_folder/university_detail.html
@@ -28,9 +28,10 @@
                         <h3 class="text-2xl font-bold text-gray-800 hover:text-indigo-600 transition line-clamp-2">
                             {{ blog.title }}
                         </h3>
-                        <span class="text-xs font-medium text-gray-400 whitespace-nowrap ml-4 mt-2">
-                            {{ blog.created_at|date:"Y.m.d" }}
-                        </span>
+                        {# <span class="text-xs font-medium text-gray-400 whitespace-nowrap ml-4 mt-2"> #}
+                            {# {{ blog.created_at|date:"Y.m.d" }} #}
+                        {# </span> #}
+                        
                     </div>
                     
                     {# 関連団体があれば表示 #}
