管理サイトでの改行を反映

--- a/templates/app_folder/blog_post_detail.html
+++ b/templates/app_folder/blog_post_detail.html
@@ -44,7 +44,7 @@
 
             {# 本文エリア #}
             <div class="p-8 sm:p-12 prose prose-lg prose-indigo max-w-none text-gray-700 leading-relaxed">
-                {{ blog_post.content|safe }}
+                {{ blog_post.content|linebreaksbr  }}
             </div>
 
             {# 執筆者エリア（フッター） #}
