--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
     <title>{% block title %}Canvas Compass{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {# Tailwind CSS #}
-    <script src="https://cdn.tailwindcss.com"></script>
+    {# 末尾にプラグインを追加 #}
+    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     <script>
         tailwind.config = {
             theme: {
