参照元を表示

--- a/templates/app_folder/university_list.html
+++ b/templates/app_folder/university_list.html
@@ -23,6 +23,11 @@
                 後楽園キャンパス 非公式ガイド
             </p>
         </div>
+        {# ↓↓↓ ★これを追加してください★ ↓↓↓ #}
+        <div class="absolute bottom-2 right-4 z-20 text-xs text-gray-400 opacity-70">
+            Image by <a href="https://chu-pick.jimdofree.com/2023/05/24/photo-library/" target="_blank" rel="noopener noreferrer" class="hover:text-white underline">Chu-Pick!</a>
+        </div>
+        {# ↑↑↑ ここまで ↑↑↑ #}
     </section>
 
     <div class="container mx-auto px-4 py-16 max-w-6xl">
